<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="423dp"
        android:layout_height="73dp"
        android:background="#7F00FF"
        android:paddingLeft="40dp"
        android:paddingTop="18dp"
        android:text="@string/AppHeader"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="420dp"
        android:layout_height="56dp"
        android:layout_marginTop="72dp"
        android:background="#097969"
        android:paddingLeft="20dp"
        android:paddingTop="2dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="210dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="164dp"
        android:text="@string/Email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="189dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/TempEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="210dp"
        android:layout_height="26dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="260dp"
        android:text="@string/Password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="286dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/TempPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="211dp"
        android:layout_height="25dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="351dp"
        android:text="@string/PasswordRepeat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="211dp"
        android:layout_height="44dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="376dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/TempPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="241dp"
        android:layout_height="21dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="550dp"
        android:text="@string/Welcome"
        android:textAlignment="center"
        android:textColor="#595959"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="132dp"
        android:layout_height="32dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="160dp"
        android:backgroundTint="#808080"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/Confirm"
        android:textColor="@color/black"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
